[gd_scene load_steps=9 format=3 uid="uid://bokx3xt4n1fug"]

[ext_resource type="Script" path="res://ui/pause_menu/pause_menu.gd" id="1_pq1ij"]
[ext_resource type="Shader" path="res://resources/shaders/blur.gdshader" id="2_ag2fy"]
[ext_resource type="PackedScene" uid="uid://xmhpn38awq6d" path="res://ui/menu_button.tscn" id="3_eoqxw"]
[ext_resource type="PackedScene" uid="uid://cqg5bdfshqsca" path="res://ui/quit_warning.tscn" id="4_7wivt"]

[sub_resource type="Animation" id="Animation_ggqxh"]
resource_name = "Close"
length = 0.25
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("background_blur:material:shader_parameter/blur_radius")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [10.0, 1.0]
}

[sub_resource type="Animation" id="Animation_aoohy"]
resource_name = "Open"
length = 0.25
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("background_blur:material:shader_parameter/blur_radius")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 10.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1ev1d"]
_data = {
"Close": SubResource("Animation_ggqxh"),
"Open": SubResource("Animation_aoohy")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wdcyn"]
shader = ExtResource("2_ag2fy")
shader_parameter/blur_radius = 1.0

[node name="pause_menu" type="Control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pq1ij")

[node name="animator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1ev1d")
}

[node name="background_blur" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_wdcyn")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="margin_container" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="menu_buttons" type="VBoxContainer" parent="margin_container"]
layout_mode = 2
alignment = 1

[node name="resume_button" parent="margin_container/menu_buttons" instance=ExtResource("3_eoqxw")]
layout_mode = 2
text = "Resume"

[node name="quit_button" parent="margin_container/menu_buttons" instance=ExtResource("3_eoqxw")]
layout_mode = 2
text = "Quit"

[node name="quit_warning" parent="margin_container" instance=ExtResource("4_7wivt")]
layout_mode = 2

[connection signal="pressed" from="margin_container/menu_buttons/resume_button" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="margin_container/menu_buttons/quit_button" to="." method="_on_quit_button_pressed"]
[connection signal="quit_cancel" from="margin_container/quit_warning" to="." method="_on_quit_warning_quit_cancel"]
[connection signal="quit_confirm" from="margin_container/quit_warning" to="." method="_on_quit_warning_quit_confirm"]
